--- a/css/styles.css
+++ b/css/styles.css
@@ -4,20 +4,19 @@ body {
 }
 
 header {
-  text-align: center;
+  color: #fff;
+  background: url('../pictures/barca.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 footer {
- /* Set font color to white */
    color: #fffffb;
- /* Set background color to black */
    background-color: #000;
-
- /* Set padding on all sides to be 20 pixels */
    padding:  20px;
- /* Set text alignment to center */
    text-align: center;
- /* Set margin on top to be 60 pixels */
    margin-top: 60px;
    position: relative;
    bottom: 0;
@@ -25,53 +24,57 @@ footer {
 }
 
 main {
-  /* Set maximum width to be 800 pixels */
   max-width: 800px;
-  /* Set margin to be automatically calculated on all sides */
   margin: auto;
-  /* Set padding to be 0 pixels top & bottom, and 20 pixels left & right */
   padding:  0px  20PX;
 }
 
-
-h1 {  /*nombre del estilo o botón*/
-  background: #cccccc; /*color fondo*/
-  border-bottom: 5px solid #b5f2f2; /*grosor, estilo y color borde inferior*/
-  font: normal normal 18px quicksand;  /*fuente*/
-  color:#ffffff;  /*color de la fuente*/
-  letter-spacing: 2px; /*separación entre las letras*/
-  text-align: center; /*podemos cambiar por right. Si lo queremos a la izq. borrar esta línea*/
-  text-transform: uppercase; /*texto se transforma en mayúsculas. Si no queremos mayúsculas, borrar esta línea*/
-  padding: 6px;  /*tamaño-ancho del fondo*/
+header .title {
+  position: absolute;
 }
 
-h3 {
-  font-size: 35px;
-  /* Set border along bottom to be a black solid line 5 pixels thick */
-  border-bottom:5PX solid#000000;
-  }
-
-
-h2 {
-  /* Set font color to be purple (BONUS: try using a hex or rgb code!) */
-    color: #948f41;;
+h1, h2, h3, h2, h5 {
+  color: #fff;
+  border-bottom: 5px solid #fff;
 }
 
-h4 {
-  font-style: normal;
-  font-weight: 100;
-  font-weight: bold;
-  font-size: 24px
+section#intro {
+  background: url('../pictures/lake.jpg') no-repeat center center fixed;
 }
 
-h5 {
- font-size: 35px;
- /* Set border along bottom to be a black solid line 5 pixels thick */
- border-bottom:5PX solid#000000;
+section .text {
+  max-width: 800px;
+  color: #fff;
 }
 
-p.different {
-  color: #666666;
+section#team {
+  display: flex;
+  flex-direction: row;
+}
+
+section#team div.member {
+  flex-grow: 1;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+section#team p {
+  color: #fff;
+  font-size: 36px;
+}
+
+section#team div#dani {
+  background: url('../pictures/dani.jpg') no-repeat center center;
+}
+
+section#team div#sharon {
+  background: url('../pictures/sharon.jpg') no-repeat center center;
+}
+
+section#bowie {
+  background: url('../pictures/bowie.jpg') no-repeat center center fixed;
 }
 
 #block5 {
@@ -143,15 +146,6 @@ img.squirrel1 {
   padding: 15px;
   width: 200px;
   margin-right: 60px;
-}
-
-
-img.barca {
-  /* Set max width to be 100% of the containing element */
-  max-width: 100%;
-  margin-top: auto;
-  margin-bottom: 15pX;
-
 }
 
 .polaroid-images a {
