added handlebars and sass

--- a/css/horizontal-layout.css
+++ b/css/horizontal-layout.css
@@ -1,4 +1,4 @@
-body {
+body.horizontal {
   display: flex;
   flex-direction: row;
   width: 600vw;
@@ -8,6 +8,8 @@ body {
 section.horizontal, header.horizontal {
   width: 100vw;
   height: 100vh;
+  max-height: 100vh;
+  overflow: scroll;
   display: flex;
   justify-content: center;
   align-items: center;
