--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -3,3 +3,6 @@ $dark-green: #246B61;
 $dark-purple: #3D3175;
 $yellow: #FECE0A;
 $dark-yellow: #E79E13;
+$title-font: 'Amatica SC', Helvetica, sans-serif;
+$primary-font: 'Slabo 27px', Helvetica, sans-serif;
+
