--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,37 @@
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Slabo 27px", Helvetica, sans-serif;
   line-height: 1.5;
+  font-size: 20px;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  margin: 0; }
 
-header {
-  color: #fff;
-  background: url("../pictures/barca.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
-  header .overlay {
+section {
+  width: 100vw;
+  height: auto;
+  position: relative; }
+  section .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px; }
+  section .text {
+    max-width: 800px;
+    color: #fff;
+    z-index: 1;
+    width: 70%;
+    margin: 40px; }
+  section .overlay {
     height: 100%;
     width: 100%;
-    background: linear-gradient(35deg, #E79E13, #246B61, #3D3175);
-    opacity: 0.4; }
-  header .title {
+    opacity: 0.5;
     position: absolute; }
-
-section, header {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+  section .call-to-action {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
 
 footer {
   color: #fffffb;
@@ -36,76 +43,192 @@ footer {
   bottom: 0;
   display: inline-block; }
 
-main {
-  max-width: 800px;
-  margin: auto;
-  padding: 0px  20PX; }
-
 h1, h2, h3, h2, h5 {
-  color: #fff; }
+  color: #fff;
+  text-align: center; }
+
+h1 {
+  font-family: "Amatica SC", Helvetica, sans-serif;
+  font-size: 4em; }
+
+h2 {
+  font-size: 3em; }
+
+h3 {
+  font-size: 2em; }
+
+.headline {
+  text-align: center;
+  z-index: 1; }
 
 .title-underline-white {
   border-bottom: 5px solid #fff; }
 
 .title-dark {
-  color: #000;
-  border-bottom: 5px solid #000; }
+  color: #3D3175; }
 
-section .text {
-  max-width: 800px;
-  color: #fff; }
+section#landing {
+  color: #fff;
+  background: url("../pictures/barca.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+  justify-content: flex-end; }
+  section#landing .overlay {
+    background: linear-gradient(35deg, #E79E13, #246B61, #3D3175); }
+  section#landing .content {
+    height: inherit;
+    justify-content: flex-end; }
+  section#landing .ftws {
+    position: absolute;
+    top: 0;
+    text-align: center;
+    border-bottom: 1px solid #fff;
+    font-size: 1.2em; }
 
 section#intro {
-  background: url("../pictures/lake.jpg") no-repeat center center fixed; }
+  background: url("../pictures/lake.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
   section#intro .overlay {
-    height: 100%;
-    width: 100%;
-    background: #2D4671;
-    opacity: 0.5; }
-  section#intro .text {
-    position: absolute; }
+    background: #2D4671; }
+  section#intro p {
+    font-size: 1.5em; }
+
+section#camping {
+  background: url("../pictures/tienda.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  section#camping .overlay {
+    background: #3D3175; }
+
+section#hiking {
+  background: url("../pictures/paseo.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  section#hiking .overlay {
+    background: #246B61; }
+
+section#pricing {
+  background: url("../pictures/canoa.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  section#pricing .overlay {
+    background: #2D4671; }
+  section#pricing .text {
+    max-width: 100%;
+    width: 100%; }
+  section#pricing .pricing-columns {
+    display: flex;
+    flex-direction: row; }
+  section#pricing .pricing {
+    flex-grow: 1;
+    padding: 20px; }
+  section#pricing .action {
+    display: flex;
+    justify-content: center; }
+    section#pricing .action .button {
+      text-align: center; }
 
 section#team {
   display: flex;
-  flex-direction: row;
-  height: auto; }
+  flex-direction: row; }
+  section#team .text {
+    max-width: 100%; }
+  section#team .overlay {
+    background: linear-gradient(190deg, #246B61, #3D3175); }
+  section#team .team-members {
+    display: flex;
+    flex-direction: row; }
   section#team .member {
     flex-grow: 1;
     display: flex;
-    justify-content: center;
-    align-items: center; }
-  section#team p {
-    color: #fff;
-    font-size: 36px;
-    position: absolute; }
-  section#team img {
-    max-width: 100%;
-    height: auto; }
-
-section#bowie {
-  background: url("../pictures/bowie.jpg") no-repeat center center fixed;
-  background-size: cover; }
-  section#bowie .overlay {
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(135deg, #E79E13, #3D3175);
-    opacity: 0.4; }
-  section#bowie .text {
-    position: absolute; }
+    flex-direction: column;
+    padding: 20px; }
+    section#team .member .description {
+      color: #fff; }
+    section#team .member img {
+      max-width: 100%;
+      height: auto; }
 
 section#gallery {
-  height: auto;
-  margin: 40px; }
+  flex-direction: column; }
+  section#gallery .overlay {
+    background: linear-gradient(190deg, #246B61, #E79E13); }
+  section#gallery .polaroid-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+  section#gallery .polaroid-images a {
+    background: white;
+    display: inline;
+    float: right;
+    background-repeat: round;
+    margin: 0 15px 30px;
+    padding: 10px 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    -webkit-transition: all .15s linear;
+    -moz-transition: all .15s linear;
+    transition: all .15s linear;
+    z-index: 0;
+    position: relative; }
+  section#gallery .polaroid-images a:after {
+    color: #333;
+    font-size: 20px;
+    content: attr(title);
+    position: relative;
+    top: 15px; }
+  section#gallery .polaroid-images a:hover {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    transform: scale(1.2);
+    z-index: 10;
+    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
+    -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7); }
+  section#gallery .polaroid-images img {
+    display: block;
+    width: inherit; }
+  section#gallery .polaroid-images a:nth-child(2n) {
+    -webkit-transform: rotate(4deg);
+    -moz-transform: rotate(4deg);
+    transform: rotate(4deg); }
+  section#gallery .polaroid-images a:nth-child(3n) {
+    -webkit-transform: rotate(-24deg);
+    -moz-transform: rotate(-24deg);
+    transform: rotate(-24deg); }
+  section#gallery .polaroid-images a:nth-child(4n) {
+    -webkit-transform: rotate(14deg);
+    -moz-transform: rotate(14deg);
+    transform: rotate(14deg); }
+  section#gallery .polaroid-images a:nth-child(5n) {
+    -webkit-transform: rotate(-18deg);
+    -moz-transform: rotate(-18deg);
+    transform: rotate(-18deg); }
 
 section#contact .overlay {
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(190deg, #246B61, #3D3175);
-  opacity: 0.4; }
+  background: linear-gradient(190deg, #246B61, #3D3175); }
 section#contact .form {
   width: 50vw;
   min-width: 400px;
-  position: absolute;
+  padding: 40px;
   display: flex;
   flex-direction: column; }
   section#contact .form .form-field {
@@ -142,76 +265,19 @@ section#contact .form {
       font-size: 1.2em;
       padding: 4px 8px; }
 
-img .team {
-  width: 500px;
-  height: 300px;
-  border-radius: 150px; }
-img .squirrel1 {
-  margin-top: auto;
-  margin-bottom: 15PX;
-  border-radius: 150px;
-  float: right;
-  padding: 15px;
-  width: 200px;
-  margin-right: 60px; }
-
-.polaroid-images {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
-
-.polaroid-images a {
-  background: white;
-  display: inline;
-  float: right;
-  background-repeat: round;
-  margin: 0 15px 30px;
-  padding: 10px 10px 25px;
-  text-align: center;
+.button {
+  padding: 10px 20px;
+  border-radius: 2px;
+  color: #fff;
   text-decoration: none;
-  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-  -webkit-transition: all .15s linear;
-  -moz-transition: all .15s linear;
-  transition: all .15s linear;
-  z-index: 0;
-  position: relative; }
-.polaroid-images a:after {
-  color: #333;
-  font-size: 20px;
-  content: attr(title);
-  position: relative;
-  top: 15px; }
-.polaroid-images a:hover {
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  transform: scale(1.2);
-  z-index: 10;
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
-  -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.7); }
-.polaroid-images img {
-  display: block;
-  width: inherit; }
-.polaroid-images a:nth-child(2n) {
-  -webkit-transform: rotate(4deg);
-  -moz-transform: rotate(4deg);
-  transform: rotate(4deg); }
-.polaroid-images a:nth-child(3n) {
-  -webkit-transform: rotate(-24deg);
-  -moz-transform: rotate(-24deg);
-  transform: rotate(-24deg); }
-.polaroid-images a:nth-child(4n) {
-  -webkit-transform: rotate(14deg);
-  -moz-transform: rotate(14deg);
-  transform: rotate(14deg); }
-.polaroid-images a:nth-child(5n) {
-  -webkit-transform: rotate(-18deg);
-  -moz-transform: rotate(-18deg);
-  transform: rotate(-18deg); }
+  margin: 10px; }
+  .button.purple {
+    background: #3D3175; }
+  .button.green {
+    background: #246B61; }
+  .button.blue {
+    background: #2D4671; }
+  .button.yellow {
+    background: #E79E13; }
 
 /*# sourceMappingURL=styles.css.map */
