--- a/templates/landing.handlebars
+++ b/templates/landing.handlebars
@@ -1,5 +1,9 @@
 <div class="overlay"></div>
-<div class="title">
-  <h1>{{landing.title}}</h1>
-  <h2>{{landing.tagline}}</h2>
+<div class="content">
+  <div class="ftws">
+    <p>{{landing.title}}</p>
+  </div>
+  <div class="text">
+    <h1 class="headline">{{landing.question}}</h1>
+  </div>
 </div>
