--- a/templates/team.handlebars
+++ b/templates/team.handlebars
@@ -1,12 +1,19 @@
-<div id="dani" class="member">
-  <div class="team-picture">
-    <img src="pictures/dani.jpg" alt="Dani">
+<div class="overlay"></div>
+<div class="content">
+  <div class="text">
+    <h1 class="headline">{{team.headline}}</h1>
+    <div class="team-members">
+      {{#each team.members}}
+        <div class="member">
+          <div class="team-picture">
+            <img src={{image}} alt={{name}}>
+          </div>
+          <div class="description">
+            <h2>{{greeting}}</h2>
+            <p>{{bio}}</p>
+          </div>
+        </div>
+      {{/each}}
+    </div>
   </div>
-  <p>{{team.dani}}</p>
-</div>
-<div id="sharon" class="member">
-  <div class="team-picture">
-    <img src="pictures/sharon.jpg" alt="Sharon">
-  </div>
-  <p>{{team.sharon}}</p>
 </div>
